--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,7 +21,7 @@ tauri-build = { version = "2", features = [] }
 tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 thiserror = "2"
-reqwest = { version = "0.12", features = ["blocking"] }
+reqwest = { version = "0.12" }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 music_uploader_server = { path = "../../music_uploader_server" }
