--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,7 +18,7 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = { version = "2", features = [] }
+tauri = { version = "2", features = ["protocol-asset"] }
 tauri-plugin-opener = "2"
 thiserror = "2"
 reqwest = { version = "0.12" }
@@ -28,3 +28,4 @@ music_uploader_server = { path = "../../music_uploader_server" }
 uuid = { version = "1.13.1", features = ["v4"] }
 toml = "0.8"
 sha256 = "1.5.0"
+tauri-plugin-dialog = "2"
